Continue translation support
- Script to get strings from code and UI files
- Add toolbars, menus,
- The base `ksu.ts` file is updated to have the new context groups
  and to have the correct location path, this is useful to show code
  in Qt Linguist to help on translation.
- TranslateUtils.py to define `translate()`
- Fix some typos
- Fix some capitalizations
- Fix some contexts
- Some UI translations are overriden via code, mark those strings
  for translation
- Remove ' notr="true"' from some strings be available for translation
  on UI files

Co-authored-by: kaktus Jacek <39754351+kaktusus@users.noreply.github.com>

--- a/Resources/ui/ksu-docked-v3.2.ui
+++ b/Resources/ui/ksu-docked-v3.2.ui
@@ -826,7 +826,7 @@ STEP &amp; scaled VRML 1/2.54</string>
         </size>
        </property>
        <property name="toolTip">
-        <string>enalble loading
+        <string>enable loading
 virtual &amp; mechanical
 models</string>
        </property>
